# urban_resilience_parliament-rebuild

./: .env.example  .gitignore  README.md  pyproject.toml  run_json_extraction_demo.py  run_llm_smoke.py  run_real_r1_one_agent.py  run_round1_demo.py  run_round1_models.py
data/examples/: # 查明两个项目关系.md.txt  city_input_minimal.json  parliamentary_output_minimal.json
data/runs/hong_kong_demo/: consul_report.json
data/runs/hong_kong_demo/round1/: all_models.json  model_deepseek-v4-flash.json  model_glm-4-flash.json  model_qwen3.5-flash.json
data/runs/hong_kong_demo/round2/: all_models.json  human_audit_packet.txt  model_deepseek-v4-flash.json  model_glm-4-flash.json  model_qwen3.5-flash.json  packet.txt
data/runs/hong_kong_real_r1/round1/: all_models.json  model_deepseek-v4-flash.json  model_glm-4-flash.json  model_qwen3.5-flash.json
data/runs/hong_kong_real_r1/round1/prompts/: infrastructure_planner_r1_prompt.txt  model_deepseek-v4-flash_r1_prompt.txt  model_glm-4-flash_r1_prompt.txt  model_qwen3.5-flash_r1_prompt.txt
data/runs/hong_kong_real_r1/round1/raw_logs/: llm_call_1781205242070_1_indicator_subset.json
data/runs/llm_smoke/: smoke_result.json
src/bundled_data/: indicator_meta_minimal.json
src/urban_resilience_parliament/: __init__.py  backend.py  calibration.py  config.py  consul.py  indicators.py  io.py  mock_agents.py  parliament.py  personas.py  prompts.py  round1.py  round2.py  round2_packet.py  run_round1.py  schemas.py  three_gates.py  validation.py
tests/: test_round1.py  test_schemas.py
(+10 files in other folders)
